--- a/content/post/current25-london-5k.adoc
+++ b/content/post/current25-london-5k.adoc
@@ -23,7 +23,7 @@ categories:
 
 This is a tradition that started back at Kafka Summit San Francisco in 2019 https://twitter.com/rmoff/status/1179047181891883008[over the Golden Gate Bridge] and has continued since then.
 
-TIP: London's Docklands offer up what would charitably be described as not the most…picturesque of routes—but with a group of similar minded people, what could be a better way to start day 1 of Current 2025 London than a 5k run or walk :)
+TIP: London's Docklands offer up what would charitably be described as not the most…picturesque of routes—but with a group of similar minded people, what could be a better way to start day 1 of Current 2025 London than a 5k run or walk :) Plus, it's flat! 🙌
 
 
 == Who? What? Where? When?
