Add explanation about upsert-kafka changelogs from DA

--- a/content/post/flinksql-changelogs.adoc
+++ b/content/post/flinksql-changelogs.adoc
@@ -1138,6 +1138,16 @@ When reading data from a table using the Kafka connector you'll only get `+I` ch
 * https://nightlies.apache.org/flink/flink-docs-master/docs/connectors/table/upsert-kafka/[Upsert Kafka] (`'connector'='upsert-kafka'`)
 ** The **Kafka Upsert** connector supports primary keys and interprets messages on a Kafka topic for the same key as updates to that key.
 As a result you'll see an update changelog from this connector (`+I`, `-D`, `-U`, `+U`).
++
+[quote]
+====
+> The open source `upsert-kafka` connector produces an upsert stream, and it only contains events of types `+U` and `-D`.
+The reason why are you seeing the full set of types when you do `SELECT * FROM customers_upsert` is that changelog normalization has been applied to the upsert stream, converting it to a retract stream.
+Currently, Flink SQL always applies changelog normalization to upsert sources.
+This will change in Flink 2.1, thanks to https://cwiki.apache.org/confluence/display/FLINK/FLIP-510%3A+Drop+ChangelogNormalize+for+operations+which+don%27t+need+it[FLIP-510].
+>
+> —David Anderson
+====
 
 Both connectors can read from a Kafka topic.
 The difference between them is primarily the semantic interpretation of the records.
