--- a/content/post/flinksql-changelogs.adoc
+++ b/content/post/flinksql-changelogs.adoc
@@ -17,10 +17,10 @@ categories:
 :rouge-style: monokai
 
 
-**SQL**.
+**SQL**. Three simple letters.
 _Ess Queue Ell_.
-`/ˌɛs kjuː ˈɛl/`
-Three simple letters.
+`/ˌɛs kjuː ˈɛl/`.
+
 
 In the data world they bind us together, yet separate us.
 
