--- a/content/post/il-2025-05.adoc
+++ b/content/post/il-2025-05.adoc
@@ -21,7 +21,7 @@ In a sense this doesn't matter, but https://towardsdatascience.com/data-analyst-
 * https://aws.amazon.com/blogs/big-data/melting-the-ice-how-natural-intelligence-simplified-a-data-lake-migration-to-apache-iceberg/[Details of a migration] from a Hive-based data warehouse to one on Apache Iceberg.
 * https://arturastutkus.substack.com/p/we-shut-down-snowflake-and-heres?r=3nzb0&triedRedirect=true[A good look from Kayak at realworld design choices and their implications], including the impact of not using schemas in Kafka, and why they ultimately moved away from Snowflake to Trino instead.
 * https://github.com/boringdata/boring-catalog[Boring catalog] is a new file-based catalog for Apache Iceberg, with a write-up https://juhache.substack.com/p/boring-iceberg-catalog[here].
-* More good content from Joe Reis' upcoming book on data modelling:
+* More good content from Joe Reis' upcoming book on data modeling:
 ** https://practicaldatamodeling.substack.com/p/the-traditional-levels-of-data-modeling[The Traditional Levels of Data Modeling].
 ** https://practicaldatamodeling.substack.com/p/example-building-a-traditional-data[Example - Building a Traditional Data Model].
 ** https://practicaldatamodeling.substack.com/p/we-dont-have-time-for-data-modeling["We Don't Have Time For Data Modeling"].
@@ -53,8 +53,7 @@ If you missed last month's, check it out at link:/2025/04/25/its-time-we-talked-
 
 == General Data Stuff
 
-* Synadia and CNCF has a dust-up over the https://www.cncf.io/blog/2025/05/01/protecting-nats-and-the-integrity-of-open-source-cncfs-commitment-to-the-community/
-[ownership] of the https://www.synadia.com/blog/synadia-response-to-cncf[NATS trademark], followed by a https://www.cncf.io/announcements/2025/05/01/cncf-and-synadia-align-on-securing-the-future-of-the-nats-io-project/[public] https://www.synadia.com/blog/nats-server-next-steps[reconciliation].
+* Synadia and CNCF has a dust-up over the https://www.cncf.io/blog/2025/05/01/protecting-nats-and-the-integrity-of-open-source-cncfs-commitment-to-the-community/[ownership] of the https://www.synadia.com/blog/synadia-response-to-cncf[NATS trademark], followed by a https://www.cncf.io/announcements/2025/05/01/cncf-and-synadia-align-on-securing-the-future-of-the-nats-io-project/[public] https://www.synadia.com/blog/nats-server-next-steps[reconciliation].
 El Reg has a https://www.theregister.com/2025/05/02/cncf_synadia_nats/[summary of it here].
 * RedMonk are my favourite analyst firm, keeping things very real and grounded in their writing. They have https://redmonk.com/sogrady/2025/05/06/oss-forward-back/[a nice article about OSS here].
 * I played around with Confluent's new Tableflow feature, looking at https://www.confluent.io/blog/building-streaming-data-pipelines-part-1/[how it could be useful for initial data exploration in a project].
