Change deffault code theme

--- a/themes/story/archetypes/default.adoc
+++ b/themes/story/archetypes/default.adoc
@@ -12,7 +12,6 @@ categories:
 :source-highlighter: rouge
 :icons: font
 :rouge-css: style
-:rouge-style: github
+:rouge-style: monokai
 
 <!--more-->
-
