--- a/content/post/ducklake.adoc
+++ b/content/post/ducklake.adoc
@@ -257,5 +257,6 @@ For example, with JDBC support in DuckDB there are some https://github.com/duckd
 == More reading
 
 * https://ducklake.select/faq[DuckLake FAQ]
+* https://www.theregister.com/2025/05/28/duckdb_flips_lakehouse_model_with/[ElReg - DuckDB flips lakehouse model with bring-your-own compute and metadata RDBMS]
 * Running https://tobilg.com/the-age-of-10-dollar-a-month-lakehouses[DuckLake on Cloudflare]
 * Join the `#ducklake` channel on the https://discord.duckdb.org/[DuckDB Discord server]
