--- a/content/post/ducklake.adoc
+++ b/content/post/ducklake.adoc
@@ -49,7 +49,7 @@ It means that you don't need a catalog (because the metadata store _becomes_ the
 
 👉 https://ducklake.select/manifesto/[The DuckLake manifesto] does a good job of outlining the current state of OTFs and challenges, and positioning DuckLake within that.
 
-One bit that caught my eye was the nascent support for https://ducklake.select/docs/stable/duckdb/advanced_features/data_inlining.html[inlined data updates], in which the SQL database (currently only DuckDB itself) is also used to hold small bits of data (imagine that! in a database!) instead of directly writing indivudual changes to a parquet file.
+One bit that caught my eye was the nascent support for https://ducklake.select/docs/stable/duckdb/advanced_features/data_inlining.html[inlined data updates], in which the SQL database (currently only DuckDB itself) is also used to hold small bits of data (imagine that! in a database!) instead of directly writing individual changes to a parquet file.
 
 === DLF vs OTF—WTF?
 
@@ -72,7 +72,7 @@ Looking at it this way, it's actually a better option from an operations point o
 
 == Relationship to Motherduck
 
-Motherduck wrote https://motherduck.com/blog/ducklake-motherduck/[a blog post about DuckLake] with their own take on the manifesto and positionining of DuckLake.
+Motherduck wrote https://motherduck.com/blog/ducklake-motherduck/[a blog post about DuckLake] with their own take on the manifesto and positioning of DuckLake.
 They're offering to provide the SQL catalog for DuckLake along with the data storage too, optionally.
 They'll also do the housekeeping on the data files—remember, even if the _metadata_ files are now in a SQL catalog, there could still be potentially the problem of small _data_ files that need compacting in order for optimal performance.
 
@@ -91,10 +91,10 @@ That's not to say Iceberg doesn't have its challenges and maybe one day will be 
 == Governance
 
 All the OTFs, and the "DLF" DuckLake are open source licenced.
-Licensing is just one element of "open" to consider though; the other is how the project is _goverened_.
+Licensing is just one element of "open" to consider though; the other is how the project is _governed_.
 This can impact how easy it is to submit bug fixes, add new features, or even make breaking changes.
 
-Apache Iceberg and Apache Hudi are goverened by the Apache Software Foundation.
+Apache Iceberg and Apache Hudi are governed by the Apache Software Foundation.
 Changes and developments are managed by the PMC, made up of contributors from different companies.
 
 Delta Lake is owned by the Linux Foundation, but in practice is a Databricks project.
@@ -108,7 +108,7 @@ WARNING: Be aware that DuckLake's https://ducklake.select/faq#ducklake-in-operat
 At the moment the only implementation of DuckLake is in the form of an extension for DuckDB.
 There are some good examples at the end of https://duckdb.org/2025/05/27/ducklake.html[the DuckLake announcement blog] of its use.
 
-I put together https://github.com/rmoff/examples/blob/main/ducklake/docker-compose.yml[a Docker Compose] to run DuckDB (DuckLake engine) and Postgres (metdata catalog) together, using local file system for data.
+I put together https://github.com/rmoff/examples/blob/main/ducklake/docker-compose.yml[a Docker Compose] to run DuckDB (DuckLake engine) and Postgres (metadata catalog) together, using local file system for data.
 
 First off, install the DuckLake and Postgres extensions in DuckDB:
 
