Add warning note about joins

--- a/content/post/flink-sql-wrangling.adoc
+++ b/content/post/flink-sql-wrangling.adoc
@@ -616,6 +616,13 @@ NOTE: We could optimise this all one step further by defining `dateTime` as a `t
 
 == Joining Kafka topics in Flink SQL
 
+[WARNING]
+====
+⚠️ *Joins in Flink SQL are not _quite_ as simple as I described here*.
+
+To understand in detail the difference between *regular joins* and *temporal joins* and which you should use (and the implications if you don't) please see my blog on the subject: link:/2025/05/20/exploring-joins-and-changelogs-in-flink-sql/[Exploring Joins and Changelogs in Flink SQL]
+====
+
 What's the point of identifying and defining primary and foreign keys to define relationships if we don't make use of them! Let's start by joining a reading that we receive to the measure to which it relates:
 
 [source,sql]
@@ -1108,4 +1115,11 @@ That was fun :) Stay tuned for more Flink-y fun and data wrangling!
 💡 I built this blog using https://www.confluent.io/en-gb/product/flink/[Apache Flink for Confluent Cloud] which is why you see things like the nice data visualisations and automatic table/topic mappings.
 
 AFAIK the principles should all be the same if you want to use Apache Flink too; the CLI is slightly different, and you'll have to figure out your own dataviz :)
+====
+
+[WARNING]
+====
+⚠️ *Joins in Flink SQL are not _quite_ as simple as I described here*.
+
+To understand in detail the difference between *regular joins* and *temporal joins* and which you should use (and the implications if you don't) please see my blog on the subject: link:/2025/05/20/exploring-joins-and-changelogs-in-flink-sql/[Exploring Joins and Changelogs in Flink SQL]
 ====
