--- a/content/post/ducklake.adoc
+++ b/content/post/ducklake.adoc
@@ -257,6 +257,8 @@ For example, with JDBC support in DuckDB there are some https://github.com/duckd
 == More reading
 
 * https://ducklake.select/faq[DuckLake FAQ]
-* https://www.theregister.com/2025/05/28/duckdb_flips_lakehouse_model_with/[ElReg - DuckDB flips lakehouse model with bring-your-own compute and metadata RDBMS]
 * Running https://tobilg.com/the-age-of-10-dollar-a-month-lakehouses[DuckLake on Cloudflare]
 * Join the `#ducklake` channel on the https://discord.duckdb.org/[DuckDB Discord server]
+* ElReg
+** https://www.theregister.com/2025/05/28/duckdb_flips_lakehouse_model_with/[DuckDB flips lakehouse model with bring-your-own compute and metadata RDBMS]
+** https://www.theregister.com/2025/06/05/ducklake_db_industry_reacts/[Industry reacts to DuckDB's radical rethink of Lakehouse architecture]
