--- a/content/post/kc-iceberg-glue.adoc
+++ b/content/post/kc-iceberg-glue.adoc
@@ -2374,6 +2374,7 @@ Switching to 8.0.0 resolved the problem.
 == Appendix: Documentation and Links
 
 * GitHub: https://github.com/apache/iceberg/tree/main/kafka-connect[Apache Iceberg - Kafka Connect sink]
-* Docs: https://iceberg.apache.org/docs/nightly/kafka-connect/[Apache Iceberg - Kafka Connect sink docs]
+* Docs: https://iceberg.apache.org/docs/nightly/kafka-connect/[Apache Iceberg - Kafka Connect sink]
 * Confluent Hub: https://www.confluent.io/hub/tabular/iceberg-kafka-connect[Apache Iceberg sink]
-* link:/categories/single-message-transform/[SMT articles on this blog]
+* Docs: https://kafka.apache.org/documentation/#connect_transforms[Apache Kafka - Transforms]
+* This blog: link:/categories/single-message-transform/[SMT articles]
