--- a/content/post/kc-iceberg-glue.adoc
+++ b/content/post/kc-iceberg-glue.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Writing to Apache Iceberg on S3 using Kafka Connect with Glue catalog'
 date: "2025-07-04T15:36:21Z"
-image: "/│images/2025/07/h_IMG_0592.webp"
-thumbnail: "/│images/2025/07/t_IMG_0587.webp"
+image: "/images/2025/07/h_IMG_0592.webp"
+thumbnail: "/images/2025/07/t_IMG_0587.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Apache Iceberg
@@ -24,7 +24,7 @@ The source Kafka topic(s) can be populated by a Kafka Connect source connector (
 
 <!--more-->
 
-image::/│images/2025/07/kc.excalidraw.png[]
+image::/images/2025/07/kc.excalidraw.png[]
 
 
 I'm going to use AWS's Glue Data Catalog, but the sink also works with other Iceberg catalogs.
@@ -105,7 +105,7 @@ $ kcctl get plugins --types=sink
 
 == 1:1 (Sending data from one Kafka topic to an Iceberg table)
 
-image::/│images/2025/07/kc11.excalidraw.png[]
+image::/images/2025/07/kc11.excalidraw.png[]
 
 We'll start by looking at the most simple example, sending data from a Kafka topic to a table in Iceberg.
 
@@ -727,7 +727,7 @@ A registry, of schemas.
 
 Instead of passing the full schema each time (like above), a client will have a _reference_ to the schema in the message, and then retrieve the actual schema from the registry.
 
-image::/│images/2025/07/sr.excalidraw.png[]
+image::/images/2025/07/sr.excalidraw.png[]
 
 The most well known of the schema registries in the Kafka ecosystem is Confluent's https://github.com/confluentinc/schema-registry[Schema Registry].
 I'll show you shortly how it is used automatically within a pipeline, but first I'm going to demonstrate its "manual" use.
@@ -894,7 +894,7 @@ I finally got the expected value showing in Iceberg:
 Let's put this into practice now.
 I'm going to use Kafka Connect with the Debezium connector to get data from Postgres and then write it to Iceberg with the same sink connector we've used above.
 
-image::/│images/2025/07/pg00.excalidraw.png[]
+image::/images/2025/07/pg00.excalidraw.png[]
 
 First, create and populate Postgres table:
 
@@ -1419,7 +1419,7 @@ Let's try it.
 
 I'm going to stick with Postgres here for my example to populate the multiple topics that we'll then read from and send to multiple Postgres tables.
 
-image::/│images/2025/07/kcpgnn.excalidraw.png[]
+image::/images/2025/07/kcpgnn.excalidraw.png[]
 
 There are four tables in my schema:
 
@@ -1838,7 +1838,7 @@ EOF
 
 As if by magic:
 
-[source,sql]
+[source,]
 ----
 🟡◗ show tables;
 ┌───────────────────────────┐
@@ -1874,7 +1874,7 @@ Dynamic routing *does* work—as I showed above—if you're using `route-field` 
 Let's now look at a variation on the above.
 Instead of many topics written each to their own table, what about multiple topics writing to the same table?
 
-image::/│images/2025/07/n1.excalidraw.png[]
+image::/images/2025/07/n1.excalidraw.png[]
 
 This is a common requirement when data is sharded across geographies or business units, for example.
 I'm using Postgres again as my source example, but this could equally just be any Kafka topic populated by any application.
@@ -2042,7 +2042,7 @@ Another option is to perform this concatenation in-flight with a custom SMT, or 
 The inverse of the above process is taking one topic and writing it out to multiple Iceberg tables.
 This is what the built-in Iceberg `route-field` is designed for, and works simply enough.
 
-image::/│images/2025/07/1n.excalidraw.png[]
+image::/images/2025/07/1n.excalidraw.png[]
 
 Imagine you've got a Kafka topic `wifi-logs` that holds wifi data:
 
